Began adding side text to accentuate the awe of Gunfighter Ballads and Trail Songs.

--- a/BigIron/index.html
+++ b/BigIron/index.html
@@ -10,10 +10,17 @@
         </head>
         <body>
             <header>
-                <h1>Big Iron</h1>
+                <a id="song" href="https://www.youtube.com/watch?v=zzICMIu5zFY" target="_blank">
+                    <h1>Big Iron</h1>
+                </a>
             </header>
+            <section>
+                <h2 id="hit-album">From the hit album</h2>
+                <h2 id="gunfighter">GUNFIGHTER</h2>
+                <h2 id="ballads">BALLADS</h2>
+            </section>
             <picture>
-                <a href="https://www.youtube.com/watch?v=zzICMIu5zFY" target="_blank">
+                <a href="https://en.wikipedia.org/wiki/Marty_Robbins" target="_blank">
                     <img id="marty-robbins" src="marty_robbins.png" alt="Marty Robbins.">
                 </a>
             </picture>
