Bluuto has been appointed to the website of his namesake
clear

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<a href="BigIron/">CLICK FOR BIG IRON</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>
+        bluuto!
+    </title>
+    <link rel="stylesheet" type="text/css" href="bluuto-landing.css">
+</head>
+<section>
+<a href="">
+    <img id="bluuto" src="bluuto.png" alt="bluuto">
+    <img id="bluuto_gif" src="bluuto-color.gif" alt="bluuto_gif">
+</a>
+</section>
+</html>
